mobile nav menu working for index

--- a/index.html
+++ b/index.html
@@ -49,21 +49,28 @@
         <a href="/html/enigma.html" class="desktop">enigma</a>
         <a href="/html/contact.html" class="desktop">contact</a>
 
-        <div class="darkmode-container">
-          <input type="checkbox" class="dark-mode-toggle" id="dark-mode-toggle" />
-          <label for="dark-mode-toggle"> </label>
-        </div>
+        <strong id="mobile-menu-btn" class="menu-button mobile">
+          <div class="line" style="width: 30px;"></div>
+          <div class="line" style="width: 25px;"></div>
+          <div class="line" style="width: 20px;"></div>
+        </strong>
 
-        <strong id="mobile-menu-btn" class="menu-button mobile">&#9781;</strong>
-        <!-- <strong id="mobile-menu-btn" class="mobile">&#9776;</strong> -->
+        <div class="darkmode-container" id="darkmode-container">
+          <input type="checkbox" class="dark-mode-toggle" id="dark-mode-toggle" />
+          <label for="dark-mode-toggle" id="desktop-label" class="desktop-label" style="font-size: 45px;"> &#9788 </label>
+        </div>
       </nav>
 
 
       <div class="mobile-menu">
         <a href="/index.html" class="mobile">home</a>
         <a href="/Meraj_cv.pdf" class="mobile">cv</a>
-        <p>About Us</p>
-        <p>Contact</p>
+        <!-- <p class="dt" id="dt"><span> Projects </span></p> -->
+        <a href="/html/merajpt.html" class="mobile">merajpt</a>
+        <a href="/movie/movie.html" class="mobile">movie</a>
+        <a href="/html/life.html" class="mobile">life</a>
+        <a href="/html/enigma.html" class="mobile">enigma</a>
+        <a href="/html/contact.html" class="mobile">contact</a>
       </div>
 
 
