--- a/html/enigma.html
+++ b/html/enigma.html
@@ -94,7 +94,7 @@
 
       <p class="dt" id="dt"><span> Problems </span></p>
 
-      <ol class="content problem">
+      <ol class="content problem" id="problem">
         <li>
           Find the surface area and the volume of an \(n\)-dimensional sphere.
         </li>
@@ -226,8 +226,10 @@
       </ol>
       <br />
       <br />
-      References: \(^1\)Nahid Mammadov, \(^2\)Jaan Kalda, \(^3\)Rashadat
-      Gadmaliyev
+      <div id="references">
+        References: \(^1\)Nahid Mammadov, \(^2\)Jaan Kalda, \(^3\)Rashadat
+        Gadmaliyev
+      </div>
     </div>
   </body>
 </html>
