--- a/movie/movie.html
+++ b/movie/movie.html
@@ -59,7 +59,7 @@
     </nav>
 
 
-    <div class="mobile-menu">
+    <div class="mobile-menu" style="display: none;">
       <a href="/index.html" class="mobile">home</a>
       <a href="/Meraj_cv.pdf" class="mobile">cv</a>
       <!-- <p class="dt" id="dt"><span> Projects </span></p> -->
