--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="profile-description">
           <p>
             I am a first year Master's student of Mechanical Engineering at
-            Ulsan National Institute of Science and Engineering (UNIST), where I
+            Ulsan National Institute of Science and Technology (UNIST), where I
             also completed my Bachelor's Degree in Mechanical Engineering and
             Computer Science & Engineering.
           </p>
