added another question

--- a/html/enigma.html
+++ b/html/enigma.html
@@ -85,7 +85,10 @@
       />
 
       <br />
+
+      <!-- <img src="/cat.gif" alt="Cat GIF" /> -->
       <p class="content">
+        
         Here I challenge you with some fascinating math and physics problems
         that I have encountered, or thought of over the years. Note that I have
         selected the problems based on the enjoyment they offer in the solution
@@ -222,6 +225,10 @@
           from infinity, with initial lateral distance to the center of the
           planet \(R\) and speed \(v\). Find the shift in the heading direction
           after it escapes the gravity of the planet.
+        </li>
+        <br />
+        <li>
+          Prove the approximation \(n! \sim \sqrt{2\pi n} \left( \frac{n}{e} \right)^n\)   (James Stirling, 1730)
         </li>
       </ol>
       <br />
