--- a/html/hangman.html
+++ b/html/hangman.html
@@ -79,7 +79,7 @@
       <br />
       <section class="content">
         <p>
-          Work under progress... But hey! Soon you will be able to play Conway's 'Game of Life' here!
+          Work under progress... But hey! Soon you will be able to play against an Information Theoric Hangman game here!
         </p>
       </section>
 
