--- a/html/merajpt.html
+++ b/html/merajpt.html
@@ -43,6 +43,7 @@
             <a href="/html/merajpt.html">merajpt</a>
             <a href="/movie/movie.html">movie</a>
             <a href="/html/life.html">life</a>
+            <a href="/html/hangman.html">hangman</a>
           </div>
         </div>
 
@@ -69,6 +70,7 @@
         <a href="/html/merajpt.html" class="mobile">merajpt</a>
         <a href="/movie/movie.html" class="mobile">movie</a>
         <a href="/html/life.html" class="mobile">life</a>
+        <a href="/html/hangman.html">hangman</a>
         <a href="/html/enigma.html" class="mobile">enigma</a>
         <a href="/html/contact.html" class="mobile">contact</a>
       </div>
